--- a/_partials/_buttons.scss
+++ b/_partials/_buttons.scss
@@ -9,8 +9,14 @@
         text-transform: uppercase;
     }
 
+.submitButton{
+    padding: 5px 10px;
+}
+
 .reload{
-    font-size: 2rem;
-    padding: 20px 40px;
+    font-size: 1.5rem;
+    line-height: 1;
+    margin-top: 20px;
+    padding: 20px 30px;
 }
 
