--- a/_partials/_box.scss
+++ b/_partials/_box.scss
@@ -20,9 +20,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    font-family: $mainFont;
-    height: 140px;
+	font-family: $mainFont;
+    height: 150px;
 	margin: 15px;
+	min-height: 150px;
 	min-width: 146px;
     width: calc(20% - 30px);
     position: relative;
@@ -75,4 +76,19 @@
 	flex-direction: column;
 }
 
+//score-keeping card styles
+
+.incorrect{
+	background-image: url("../assets/cross.png");
+	background-repeat: no-repeat; 
+	background-position: center center;
+	pointer-events: none;
+}
+
+.correct{
+	background-image: url("../assets/checkmark.png");
+	background-repeat: no-repeat; 
+	background-position: center center;
+	pointer-events: none;
+}
     
