--- a/_partials/_input.scss
+++ b/_partials/_input.scss
@@ -1,3 +1,4 @@
+//input bar stylings 
 
 .formFlex{
     align-items: center;
@@ -12,15 +13,12 @@
     align-items: center;
     background-color: $black;
     padding: 0 20px;
-    height: 50px;
     margin: 10px 0;
     width: 100%;
     .editionInfo{
          p{
+            @include instructionStyles(1.75rem); 
             color: $cream;
-            font-family: $taglineFont;
-            font-size: 1.75rem;
-            letter-spacing: 2px;
         }
     }
     .editionInfo,
@@ -33,6 +31,8 @@
 }
 
 form {
+    align-items: center;
+    display:flex;
     .user-input{
         margin: 15px;
         padding: 3px;
@@ -43,5 +43,109 @@ form {
             font-size: 1.25rem;
         }
     }
+}
+
+.scoreCard{
+    @include instructionStyles(1.75rem);
+    display: flex;
+    h4{
+        margin: 0 10px;
+        text-transform: uppercase;
+    }
+    .rightAnswer{
+        color: $green;
+    }
+    .wrongAnswer{
+        color: $red;
+    }
+}
+
+@media (max-width: 1300px){
+    
+   .appInput{
+       .editionInfo{
+            p{
+                font-size: 1.5rem;
+            }
+        }
+        .scoreCard{
+            font-size: 1.5rem;
+        }
+    }
+
+}
+
+@media (max-width: 1200px){
+    
+   .appInput{
+       .editionInfo{
+            p{
+                font-size: 1.25rem;
+            }
+        }
+        .scoreCard{
+            font-size: 1.5rem;
+        }
+    }
+    form {
+        align-items: center;
+        display:flex;
+        .user-input{
+            margin: 5px;
+    }
+}
+
+}
+@media (max-width: 1100px){
+    
+   .appInput{
+        justify-content: center;
+        margin: 10px 0;
+        padding: 15px 20px;
+    }   
+
+}
+
+@media (max-width: 767px){
+
+    .appInput{
+        flex-direction: column;
+        margin: 10px 0;
+        padding: 15px 20px;
+    }   
+
+    .formFlex{
+        display: flex;
+        flex-direction: column;
+    }
+
+}
+@media (max-width: 500px){
+
+    .appInput{
+        padding: 15px 10px;
+        .scoreCard h4{
+            font-size: 1.25rem;
+        }
+    }   
+
+}
+@media (max-width: 480px){
+
+    form {
+        flex-direction: column;
+
+    .user-input{
+        margin: 5px;
+        padding: 3px;
+        position: relative;
+        width: 250px;
+        &::placeholder{
+            font-family: $mainFont;
+            font-size: 1.1rem;
+        }
+    }
+}
+
 }
 
