--- a/_partials/_title.scss
+++ b/_partials/_title.scss
@@ -57,7 +57,7 @@
     
     .title{
         h1{
-            margin: 15px 0 0;
+            margin: 25px 0 0;
             a{
             font-size: 2rem;
                 span{
@@ -66,7 +66,7 @@
             }  
         }
         p{
-            font-size: 1.25rem;
+            display: none;
         } 
     }
     
