--- a/_partials/_buttons.scss
+++ b/_partials/_buttons.scss
@@ -25,8 +25,9 @@
     .submitButton{
         font-size: 1rem;
         font-weight: bold;
+        margin: 0 10px;
         padding: 5px;
-        width: 250px;
+        width:  250px;
     }   
     
 }
