--- a/_partials/_input.scss
+++ b/_partials/_input.scss
@@ -60,6 +60,10 @@ form {
     }
 }
 
+.tagline{
+    display: none;  
+}
+
 @media (max-width: 1300px){
     
    .appInput{
@@ -93,7 +97,6 @@ form {
         .user-input{
             margin: 5px;
     }
-}
 
 }
 @media (max-width: 1100px){
@@ -105,6 +108,19 @@ form {
     }   
 
 }
+@media (max-width: 900px){
+    
+   .appInput{
+        justify-content: space-around;
+      
+    }   
+   
+    .formFlex{
+        display: flex;
+        flex-direction: column;
+    }
+ 
+}
 
 @media (max-width: 767px){
 
@@ -114,16 +130,13 @@ form {
         padding: 15px 20px;
     }   
 
-    .formFlex{
-        display: flex;
-        flex-direction: column;
-    }
+    
 
 }
 @media (max-width: 500px){
 
     .appInput{
-        padding: 15px 10px;
+        padding: 15px 5px;
         .scoreCard h4{
             font-size: 1.25rem;
         }
@@ -132,20 +145,40 @@ form {
 }
 @media (max-width: 480px){
 
-    form {
-        flex-direction: column;
-
-    .user-input{
-        margin: 5px;
-        padding: 3px;
-        position: relative;
-        width: 250px;
-        &::placeholder{
-            font-family: $mainFont;
-            font-size: 1.1rem;
+    .appInput{
+        .editionInfo{
+            text-align: center;
+            width: 250px;
+            p{
+                font-size: 1.25rem;
+            }
+        }
+        .scoreCard{
+            font-size: 1.25rem;
         }
     }
-}
 
-}
+    form{
+        flex-direction: column;
+        .user-input{
+            margin: 0 10px;
+            padding: 5px;
+            width: 250px;
+            &::placeholder{
+                font-family: $mainFont;
+                font-size: 1.1rem;
+            }
+        }
+    }
 
+    .formFlex{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    
+    .tagline{
+        display: block;
+    }
+}
+}
