--- a/_partials/_instructions.scss
+++ b/_partials/_instructions.scss
@@ -86,6 +86,12 @@
     }
 }
 
+@media (max-width: 750px){
+    .help{
+        position: absolute; top: 15px; right: 15px;
+    }
+}
+
 @media (max-width: 650px){
     .appInstructions{     
         font-size: 1.75rem;
@@ -95,8 +101,21 @@
             right: 10px; top: 10px;
         }
     }
+
+    .help{
+        font-size: 2.3rem;
+        position: absolute; top: 5px; right: 5px; 
+    }
 }
+
+
 @media (max-width: 480px){
+
+    .help{
+        font-size: 2rem;
+        padding: 5px;
+    }
+
     .appInstructions{     
         font-size: 1.5rem;
         line-height: 2;
