--- a/_partials/_setup.scss
+++ b/_partials/_setup.scss
@@ -8,9 +8,9 @@ html{
     font-size: 16px;
 }
 
-body{
-    overflow: hidden;
-}
+// body{
+//     overflow: hidden;
+// }
 
 ul{
     list-style-type: none;
@@ -27,9 +27,9 @@ a{
     width: 90%;
 }
 
-@media (max-width: 1000px){
+// @media (max-width: 1000px){
 
-    body{
-    overflow: visible;
-}
-}
+//     body{
+//     overflow: visible;
+// }
+// }
